[gd_scene load_steps=3 format=3 uid="uid://d2xp46f0m2mfb"]

[ext_resource type="Script" uid="uid://cqbpapg8a5rpn" path="res://scenes/main_menu.gd" id="1_l6cm7"]

[sub_resource type="LabelSettings" id="LabelSettings_l6cm7"]
font_size = 64
shadow_size = 6
shadow_color = Color(0, 0, 0, 0.627451)

[node name="MainMenu" type="Node3D"]
script = ExtResource("1_l6cm7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12156863, 0.105882354, 0.039215688, 0.45882353)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.5
offset_top = -117.0
offset_right = 101.5
offset_bottom = 117.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="CanvasLayer/ColorRect/VBoxContainer"]
layout_mode = 2
text = "When Hamsters Attack TD"
label_settings = SubResource("LabelSettings_l6cm7")

[node name="Control" type="Control" parent="CanvasLayer/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="PlayButton" type="Button" parent="CanvasLayer/ColorRect/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="QuitButton" type="Button" parent="CanvasLayer/ColorRect/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Control" type="Control" parent="CanvasLayer/ColorRect/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="SettingsLabel" type="Label" parent="CanvasLayer/ColorRect/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="MusicCheckButton" type="CheckButton" parent="CanvasLayer/ColorRect/VBoxContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Music"

[node name="SfxCheckButton" type="CheckButton" parent="CanvasLayer/ColorRect/VBoxContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Sound Effects
"

[connection signal="pressed" from="CanvasLayer/ColorRect/VBoxContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ColorRect/VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
